# sound

./: CMakeLists.txt  CMakeLists.txt.user.259bc11  DigConfe_en.qm  MainWindow.cpp  MainWindow.h  MainWindow.ui  base.cpp  base.h  config.json  en_UN.qm  funcView.cpp  funcView.h  funcView.ui  localconfig.h  main.cpp  protocal.cpp  protocal.h  style.css  vcpkg.json  zh_CN.qm
Tcp/: constant.h  tcpsocket.cpp  tcpsocket.h
pic/: image.qrc
tool/: Hooker.h  localconfig.cpp  localconfig.h  slidersgroup.cpp  slidersgroup.h  virtualTemp.h
translate/: DigConfe_en.qm  DigConfe_en.ts  DigConfe_zh_CN.ts
